force-app/main/default/objects/Bidder__c/Bidder__c.object-meta.xml
<CustomObject>
    <label>Bidder</label>
    <nameField>
        <label>Bidders</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>bidders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>