force-app/main/default/objects/Bidder__c/fields/Basis_of_Design__c.field-meta.xml
<CustomField>
    <fullName>Basis_of_Design__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basis of Design</label>
    <type>Checkbox</type>
</CustomField>