force-app/main/default/objects/Bidder__c/fields/Mechanical_contractor__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mechanical Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>bidders (Mechanical Contractor)</relationshipLabel>
    <relationshipName>bidders</relationshipName>
    <type>Lookup</type>
</CustomField>